--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <div class="contaienr">
       <div class="todo-app">
-        <h2>To-Do List <span class="icon"><img src="icon/list-check-solid.svg" alt=""></span></h2>
+        <h2>To-Do List -</h2>
         <div class="row">
             <input type="text" name="" id="" placeholder="Add your to do">
             <button>Add</button>
         </div>
 
         <ul id="list-container">
-            <li>test task 1</li>
+            <li class="checked">test task 1</li>
             <li>test task 2</li>
             <li>test task 3</li>
         </ul>
