--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="todo-app">
         <h2>To-Do List -</h2>
         <div class="row">
-            <input type="text" name="" id="" placeholder="Add your to do">
-            <button>Add</button>
+            <input id="input-box" type="text" name="" id="" placeholder="Add your to do">
+            <button onclick="addTask()">Add</button>
         </div>
 
         <ul id="list-container">
-            <li class="checked">test task 1</li>
+            <!-- <li class="checked">test task 1</li>
             <li>test task 2</li>
-            <li>test task 3</li>
+            <li>test task 3</li> -->
         </ul>
       </div>
     </div>
